[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
hyper = {version = "0.14.17", features = ["full"]}
tokio = {version = "1.17.0", features = ["full"]}
tower = {version = "0.4.12", features = ["full"]}
serde_json = "1.0.79"
serde = "1.0.136"
serde_derive = "1.0.136"
mongodb = "2.0.0"
# [dependencies.mongodb]
# version = "2.1.0"
# default-features = false
# features = ["async-std-runtime"]